feat(vistas): Agregar vistas datos, consulta y gestion de fechas

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,13 @@
 
       
         <div class="content-area">
-            {% block page_content %}{% endblock %}
+            {% block page_content %}
+            <div class="card">
+                <div class="card-content">
+                    <h3>Solicitantes</h3>
+                </div>
+            </div>
+            {% endblock %}
         </div>
     </main>
     {% endif %}
