--- a/templates/solicitante.html
+++ b/templates/solicitante.html
@@ -4,10 +4,64 @@
 {% block page_title %}Solicitantes{% endblock %}
 {% block page_subtitle %}Gestión de solicitantes {% endblock %}
 
+{% block extra_head %}
+    {% load static %}
+        <link rel="stylesheet" href="{% static 'css/menu.css' %}">
+{% endblock %}
+
 {% block page_content %}
     <div class="card">
         <div class="card-content">
             <h3>Solicitantes</h3>
         </div>
     </div>
+
+    <!-- Menu Section -->
+            <div class="menu-section">
+                <h4 class="menu-title">
+                    <i class="fa-solid fa-list-check"></i>
+                    Opciones Principales
+                </h4>
+                <div class="menu-grid">
+                    <a href="{% url 'dashboard' %}" class="menu-card {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
+                        <div class="menu-card-icon blue">
+                            <i class="fa-solid fa-user-plus"></i>
+                        </div>
+                        <div class="menu-card-content">
+                            <h5>Registro Solicitante</h5>
+                            <p>Registrar un nuevo solicitante en el sistema</p>
+                        </div>
+                        <div class="menu-card-arrow">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                    </a>
+
+                    <a href="actualizacion_datos.html" class="menu-card">
+                        <div class="menu-card-icon green">
+                            <i class="fa-solid fa-user-pen"></i>
+                        </div>
+                        <div class="menu-card-content">
+                            <h5>Actualización de Datos</h5>
+                            <p>Modificar información de solicitantes existentes</p>
+                        </div>
+                        <div class="menu-card-arrow">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                    </a>
+
+                    <a href="consulta_expediente.html" class="menu-card">
+                        <div class="menu-card-icon purple">
+                            <i class="fa-solid fa-folder-open"></i>
+                        </div>
+                        <div class="menu-card-content">
+                            <h5>Consulta de Expediente</h5>
+                            <p>Ver y buscar expedientes de solicitantes</p>
+                        </div>
+                        <div class="menu-card-arrow">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
 {% endblock %}
