feat(vistas): Arreglar codigo CSS de modulo solicitante

--- a/templates/solicitante/actualizacion_datos.html
+++ b/templates/solicitante/actualizacion_datos.html
@@ -26,9 +26,9 @@
                 <p>Modificar información del solicitante</p>
             </div>
             <div class="topbar-actions">
-                <a href="/dashboard/" class="btn-secondary">
+                <a href="{% url 'solicitante' %}" class="btn-secondary {% if request.resolver_match.url_name == 'solicitante' %}active{% endif %}">
                     <i class="fa-solid fa-arrow-left"></i>
-                    Volver al Dashboard
+                    Volver al Inicio
                 </a>
             </div>
         </header>
