feat(vistas): Agregar modulo de solicitudes y arreglar templates del modulo solicitantes

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                 <i class="fa-solid fa-users"></i>
                 <span>Solicitante</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="{% url 'solicitud' %}" class="nav-item">
                 <i class="fa-solid fa-folder-open"></i>
                 <span>Expedientes</span>
             </a>
